<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_meeting_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mareu.ui.AddReunionActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_theme"
        android:layout_margin="15dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/veuillez_saisir_le_th_me_de_la_r_union"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_theme"
            style="@style/Widget.MaterialComponents.TextInputEditText.FilledBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <TimePicker
        android:id="@+id/time_picker"
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:timePickerMode="spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_theme" />

    <Button
        android:id="@+id/button_confirm_hour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="Confirmer heure"
        app:layout_constraintEnd_toEndOf="@+id/time_picker"
        app:layout_constraintStart_toStartOf="@+id/time_picker"
        app:layout_constraintTop_toBottomOf="@+id/time_picker" />

    <Spinner
        android:id="@+id/spinner_salle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_confirm_hour" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_participants"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/veuillez_saisir_les_adresses_email_des_participants_s_par_es_par_des_virgules"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinner_salle"
        app:startIconDrawable="@drawable/ic_person">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_participants"
            android:layout_margin="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_validate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/valider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_participants" />

</androidx.constraintlayout.widget.ConstraintLayout>