...
                    card_view:layout_constraintEnd_toStartOf="@+id/deleteButton"
                    card_view:layout_constraintHorizontal_bias="0.0"
                    card_view:layout_constraintStart_toEndOf="@+id/circle_view"
                    card_view:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/textView_salle_heure_theme"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/theme_heure_salle"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                </HorizontalScrollView>

                <TextView
                    android:id="@+id/textView_participants"
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/participantsMails"
...
